--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "deb"
       ],
       "category": "Network",
-      "synopsis": "Proton VPN Desktop Client"
+      "synopsis": "Proton VPN Desktop Client",
+      "maintainer": "ProtonVPN <contact@protonvpn.com>"
     },
     "win": {
       "target": [
@@ -56,7 +57,10 @@
     "proton",
     "desktop"
   ],
-  "author": "",
+  "author": {
+    "name": "ProtonVPN",
+    "email": "contact@protonvpn.com"
+  },
   "license": "ISC",
   "devDependencies": {
     "@types/electron": "^1.4.38",
