--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
+        # os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -34,19 +35,19 @@ jobs:
     - name: Build Electron app
       run: npm run dist
 
-    - name: Upload Windows artifacts
-      if: matrix.os == 'windows-latest'
-      uses: actions/upload-artifact@v4
-      with:
-        name: windows-build
-        path: build/*.exe
+    # - name: Upload Windows artifacts
+    #   if: matrix.os == 'windows-latest'
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: windows-build
+    #     path: build/*.exe
         
-    - name: Upload macOS artifacts
-      if: matrix.os == 'macos-latest'
-      uses: actions/upload-artifact@v4
-      with:
-        name: macos-build
-        path: build/*.dmg
+    # - name: Upload macOS artifacts
+    #   if: matrix.os == 'macos-latest'
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: macos-build
+    #     path: build/*.dmg
         
     - name: Upload Linux artifacts
       if: matrix.os == 'ubuntu-latest'
