--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
       
     - name: Build Electron app
       run: npm run dist
+      env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     # - name: Upload Windows artifacts
     #   if: matrix.os == 'windows-latest'
