ignore .deb file.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: linux-build
-        path: |
-          build/*.AppImage
-          build/*.deb
+        path: build/*.AppImage
+        # path: |
+        #   build/*.AppImage
+        #   build/*.deb
