--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,13 @@ jobs:
       
     - name: Build TypeScript
       run: npm run build
-      
-    - name: Build Electron app
-      run: npm run dist
       env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+    # - name: Build Electron app
+    #   run: npm run dist
+    #   env:
+    #       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     # - name: Upload Windows artifacts
     #   if: matrix.os == 'windows-latest'
