--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        # os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -29,36 +28,20 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
+    - name: Clean dist directory
+      run: npm run clean
+      
     - name: Build TypeScript
       run: npm run build
-      env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-    # - name: Build Electron app
-    #   run: npm run dist
-    #   env:
-    #       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    # - name: Upload Windows artifacts
-    #   if: matrix.os == 'windows-latest'
-    #   uses: actions/upload-artifact@v4
-    #   with:
-    #     name: windows-build
-    #     path: build/*.exe
-        
-    # - name: Upload macOS artifacts
-    #   if: matrix.os == 'macos-latest'
-    #   uses: actions/upload-artifact@v4
-    #   with:
-    #     name: macos-build
-    #     path: build/*.dmg
+    - name: Package Electron app
+      run: npm run package
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Upload Linux artifacts
       if: matrix.os == 'ubuntu-latest'
       uses: actions/upload-artifact@v4
       with:
         name: linux-build
-        path: build/*.AppImage
-        # path: |
-        #   build/*.AppImage
-        #   build/*.deb
+        path: release/*.AppImage
