--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main/main.js",
   "scripts": {
     "start": "electron .",
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && webpack && tsc",
     "watch": "tsc -w",
     "dev": "npm run build && tsc -w & electron .",
     "package": "npm run build && electron-builder",
@@ -22,10 +22,12 @@
   "devDependencies": {
     "@types/node": "latest",
     "@types/node-fetch": "^2.6.3",
+    "copy-webpack-plugin": "^11.0.0",
     "crypto-browserify": "^3.12.1",
     "css-loader": "^7.1.2",
     "electron": "latest",
     "electron-builder": "^24.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -45,6 +47,15 @@
     "files": [
       "dist/**/*",
       "package.json"
+    ],
+    "extraResources": [
+      {
+        "from": "dist/renderer/assets",
+        "to": "assets",
+        "filter": [
+          "**/*"
+        ]
+      }
     ],
     "linux": {
       "target": [
