--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "node-fetch": "^2.6.9"
   },
   "devDependencies": {
-    "@types/node": "latest",
+    "@electron/typescript-definitions": "^9.1.2",
+    "@types/electron": "^1.4.38",
+    "@types/node": "^22.14.1",
     "@types/node-fetch": "^2.6.3",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "crypto-browserify": "^3.12.1",
     "css-loader": "^7.1.2",
-    "electron": "latest",
-    "electron-builder": "^24.0.0",
+    "electron": "^35.2.1",
+    "electron-builder": "^24.13.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "os-browserify": "^0.3.0",
@@ -35,7 +37,7 @@
     "rimraf": "^5.0.0",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
-    "typescript": "latest",
+    "typescript": "^5.8.3",
     "webpack": "^5.99.6",
     "webpack-cli": "^6.0.1"
   },
