--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/electron": "^1.4.38",
     "@types/node": "^22.14.1",
     "@types/node-fetch": "^2.6.3",
+    "assert": "^2.1.0",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "crypto-browserify": "^3.12.1",
@@ -35,9 +36,12 @@
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "rimraf": "^5.0.0",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2",
     "webpack": "^5.99.6",
     "webpack-cli": "^6.0.1"
   },
