--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "devDependencies": {
     "@electron/typescript-definitions": "^9.1.2",
-    "@types/electron": "^1.4.38",
     "@types/node": "^22.14.1",
     "@types/node-fetch": "^2.6.3",
     "assert": "^2.1.0",
@@ -40,10 +39,12 @@
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
+    "typescript-plugin-css-modules": "^5.1.0",
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2",
     "webpack": "^5.99.6",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "build": {
     "appId": "com.proton.vpn.desktop.proxy",
