--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,38 @@
-node_modules
-dist
-.vscode
-release
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build output
+dist/
+build/
+
+# IDE/Editor specific
+.vscode/
+.idea/
+*.sublime-*
+*.swp
+.DS_Store
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Debug logs
+debug.log
+logs/
+*.log
+
+# Testing
+coverage/
+
+# Runtime data
+.pid
+*.pid
+*.seed
+*.pid.lock
+
+# Source extension submodule - do not modify
+proton-vpn-browser-extension/
