--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
-    "name": "proton-vpn-web-app",
+    "name": "proton-vpn-desktop-proxy",
     "version": "1.0.0",
+    "description": "Desktop proxy bridge for Proton VPN browser extension",
     "main": "electron-main.js",
     "scripts": {
-        "start": "node server.js",
-        "electron": "electron ."
+        "start": "electron .",
+        "proxy": "node server.js",
+        "dev": "electron . --debug",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/protonvpn/proton-vpn-desktop-proxy"
+    },
+    "keywords": [
+        "proton",
+        "vpn",
+        "proxy",
+        "electron",
+        "bridge"
+    ],
+    "author": "Proton AG",
+    "license": "GPL-3.0",
     "dependencies": {
         "electron": "^35.2.1",
         "electron-chrome-extensions": "^4.7.0",
@@ -13,5 +29,8 @@
         "express": "^4.17.1",
         "http-proxy": "^1.18.1",
         "ipaddr.js": "^2.2.0"
+    },
+    "devDependencies": {
+        "electron-reload": "^2.0.0"
     }
 }
